# oer-voicerag

./: .gitignore  README.md  environment.yml  flexbooks_config.yml  pyproject.toml
contexts/: context_searcher_new.txt  context_searcher_summarize.txt
scripts/: demo_chatbot.py  frontend.py  test.py  test_audio_encoding.py  test_docset.py  test_redis.py  test_upsert.py  upsert_document_catalogue.py
src/: audio.py  chat.py
