[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = [{include = "src"}]

# [tool.setuptools.package-data]
# "*" = ["models.yaml"]

[project]
name = "oer-rag"
version = "0.1.0"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "fabdata-llm @ git+https://github.com/AI-for-Education/fabdata-llm.git@v0.18.1",
    "fabdata-llm-retrieval @ git+https://github.com/AI-for-Education/fabdata-llm-retrieval.git@v0.7.3",
    "numpy == 1.26.*",
    "pandas == 2.*",
    "lxml == 4.9.*",
    "tqdm == 4.*",
    "joblib == 1.4.*",
    "beautifulsoup4 == 4.12.*",
    "scipy == 1.14.*",
    "pyaudio",
    "pydub",
]
